--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "alchaplinsky",
+        "owner": "swiftyapp",
         "repo": "swifty"
       }
     ],
