--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@swiftyapp/cryptor": "^1.1.2",
     "classnames": "^2.3.1",
     "electron-log": "^4.4.8",
-    "electron-notarize": "^1.2.1",
     "electron-unhandled": "^4.0.1",
     "electron-updater": "^5.2.1",
     "electron-util": "^0.17.2",
@@ -48,6 +47,7 @@
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@electron/notarize": "^1.2.3",
     "babel-jest": "^29.4.1",
     "babel-loader": "^9.1.2",
     "bozon": "^1.3.5",
@@ -55,7 +55,7 @@
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^7.1.1",
-    "electron": "^22.2.0",
+    "electron": "^23.0.0",
     "eslint": "^8.33.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
