--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Swifty",
   "version": "0.6.13",
   "description": "Modern, Lightweight, Fast and Free Password Manager",
-  "repository": "https://github.com/alchaplinsky/swifty.git",
+  "repository": "https://github.com/swiftyapp/swifty.git",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "@swiftyapp/cryptor": "^1.1.2",
@@ -48,7 +48,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@electron/notarize": "^1.2.3",
-    "babel-jest": "^29.4.1",
+    "babel-jest": "^29.4.2",
     "babel-loader": "^9.1.2",
     "bozon": "^1.3.5",
     "copy-webpack-plugin": "^11.0.0",
@@ -63,8 +63,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
-    "jest": "^29.4.1",
-    "prettier": "^2.8.3",
+    "jest": "^29.4.2",
+    "prettier": "^2.8.4",
     "ps-node": "^0.1.6",
     "react-svg-loader": "^3.0.3",
     "sass": "^1.58.0",
