--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
   "resolutions": {
     "js-yaml": "^3.14.1",
     "node-forge": ">=1.3.1",
-    "nth-check": ">=2.0.1",
-    "yargs-parser": "^20.2.9"
+    "nth-check": ">=2.0.1"
   },
   "build": {
     "appId": "com.electron.swifty",
